--- a/src/Cassandra.IntegrationTests/App.config
+++ b/src/Cassandra.IntegrationTests/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="CassandraVersion" value="2.1.0-rc2"/>
     <add key="IpPrefix" value="127.0.0."/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
