--- a/src/Cassandra/packages.config
+++ b/src/Cassandra/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net40" />
   <package id="lz4net" version="1.0.5.93" targetFramework="net40" />
-  <package id="Snappy.NET" version="1.1.1.8" targetFramework="net40" />
+  <package id="Snappy.NET" version="1.1.1.8" targetFramework="net40" requireReinstallation="True" />
 </packages>
