--- a/src/Cassandra/Cassandra.csproj
+++ b/src/Cassandra/Cassandra.csproj
@@ -72,6 +72,7 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="IConnection.cs" />
     <Compile Include="SslStreamTcpClient.cs" />
     <Compile Include="StreamTcpClient.cs" />
     <Compile Include="Exceptions\RequestInvalidException.cs" />
