--- a/src/Cassandra/Cassandra.csproj
+++ b/src/Cassandra/Cassandra.csproj
@@ -78,7 +78,9 @@
     <Compile Include="FrameFlags.cs" />
     <Compile Include="FrameOperation.cs" />
     <Compile Include="IConnection.cs" />
+    <Compile Include="IConnectionManager.cs" />
     <Compile Include="SslStreamTcpClient.cs" />
+    <Compile Include="ConnectionManager.cs" />
     <Compile Include="StreamTcpClient.cs" />
     <Compile Include="Exceptions\RequestInvalidException.cs" />
     <Compile Include="HostConnectionPool.cs" />
